# UgcBrowser

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/api/: ApiClient.cpp  ApiClient.h
src/api/backends/: ApiBackend.h  RefreshApiBackend.cpp  RefreshApiBackend.h  SoundShapesApiBackend.cpp  SoundShapesApiBackend.h
src/api/types/: ApiLevel.h
src/backends/: ApiBackend.h  RefreshApiBackend.h
src/windows/: MainWindow.cpp  MainWindow.h  MainWindow.ui  mainwindow.cpp  mainwindow.h
